--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,7 @@
 				display: flex;
 				flex-direction: column;
 				gap: 10px;
+				padding: 15px;
 			}
 
 			#time {
@@ -43,6 +44,7 @@
 			<div id="time">-</div>
 		</div>
 		<script type="module">
+			const centerEl = document.getElementById("center");
 			const timeEl = document.getElementById("time");
 
 			function loop() {
@@ -57,6 +59,15 @@
 				requestAnimationFrame(loop);
 			}
 			loop();
+
+			function resize() {
+				const maxWidth = Math.min(1, window.innerWidth / centerEl.offsetWidth);
+				const maxHeight = Math.min(1, window.innerHeight / centerEl.offsetHeight);
+				const scale = Math.min(maxWidth, maxHeight);
+				centerEl.style.transform = `scale(${scale})`;
+			}
+			window.addEventListener("resize", resize);
+			resize();
 		</script>
 	</body>
 </html>
